# back/server.js
@@ -4,6 +4,8 @@ import express from "express";
 
 import NotFoundError from "./src/errors/not-found.error.js";
 import errorMiddleware from "./src/middlewares/error.middleware.js";
+import authMiddleware from "./src/middlewares/auth.middleware.js";
+import authRoutes from "./src/routes/auth.routes.js";
 import loadRoutes from "./src/routes/index.js";
 
 const app = express();
@@ -11,7 +13,6 @@ const app = express();
 const port = 3000;
 
 app.use(express.json());
-app.use(await loadRoutes());
 
 app.get("/health", (req, res) => {
   res.status(200).json({
@@ -19,6 +20,10 @@ app.get("/health", (req, res) => {
     service: "stocky-backend",
   });
 });
+
+app.use("/auth", authRoutes);
+app.use(authMiddleware);
+app.use(await loadRoutes());
 
 app.use((req, res) => {
   throw new NotFoundError("Rota não encontrada", {
